# blog_articles

./: 01_kelly_criterion.ipynb  02_covariance_estimation.ipynb  03_financial_plotting.ipynb  04_bandit_portfolio_mgmt.ipynb  pyproject.toml
data/: BMW.csv  DB.csv
