[tool.poetry]
name = "blog-articles"
version = "0.1.0"
description = ""
authors = ["Stephan Baier <stephan.baier@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_articles"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.3"
plotly = "^5.13.0"
pyportfolioopt = "^1.5.4"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
ipympl = "^0.9.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
